[gd_scene load_steps=17 format=2]

[ext_resource path="res://Limpiar/Limpiar.gd" type="Script" id=1]
[ext_resource path="res://Limpiar/Leaf/Leaf.tscn" type="PackedScene" id=2]
[ext_resource path="res://Limpiar/fondo.png" type="Texture" id=3]
[ext_resource path="res://CustomResources/DynamicFonts/FiraCode-Medium-32.tres" type="DynamicFont" id=4]
[ext_resource path="res://Limpiar/MusicManager.gd" type="Script" id=5]
[ext_resource path="res://Limpiar/Metronome.gd" type="Script" id=6]
[ext_resource path="res://Audio/MusicRefLoop_CleaningStage_110BPM.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sprites/bird-02.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/bird-02-pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/Scripts/DancingBird.gd" type="Script" id=10]
[ext_resource path="res://Audio/achli2.ogg" type="AudioStream" id=11]
[ext_resource path="res://Limpiar/Leaf/Stick.tscn" type="PackedScene" id=12]
[ext_resource path="res://CustomResources/DynamicFonts/FiraCode-Medium-128.tres" type="DynamicFont" id=13]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 4 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 300, 300 )

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[node name="Limpiar" type="Node2D"]
script = ExtResource( 1 )
leaf = ExtResource( 2 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 640, 400 )
z_index = -1
texture = ExtResource( 3 )

[node name="CleanCheck" type="Timer" parent="."]

[node name="ResetCountdown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Debug" type="Control" parent="."]
editor/display_folded = true
margin_right = 1280.0
margin_bottom = 800.0
mouse_filter = 2

[node name="CleanTime" type="Label" parent="Debug"]
anchor_right = 1.0
margin_bottom = 14.0
theme = SubResource( 1 )
text = "placeholder"
align = 1
valign = 1

[node name="MusicManager" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 5 )

[node name="Metronome" type="Node" parent="MusicManager"]
script = ExtResource( 6 )
bpm = 110.0

[node name="Display" type="Label" parent="MusicManager/Metronome"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Timer" type="Timer" parent="MusicManager/Metronome"]
process_mode = 0
wait_time = 0.5

[node name="Mx" type="AudioStreamPlayer" parent="MusicManager"]
stream = ExtResource( 7 )

[node name="Bird4" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 958.687, 118.583 )

[node name="DancingBird" type="TouchScreenButton" parent="Bird4"]
modulate = Color( 0.407843, 0.878431, 0.141176, 1 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )
shape = SubResource( 2 )
passby_press = true
script = ExtResource( 10 )
cuando = 4

[node name="Dance" type="AnimationPlayer" parent="Bird4/DancingBird"]
anims/Dance = SubResource( 3 )

[node name="Chirp" type="AudioStreamPlayer2D" parent="Bird4/DancingBird"]
stream = ExtResource( 11 )

[node name="LeafContainer" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Leaf" parent="LeafContainer" instance=ExtResource( 2 )]
position = Vector2( 100, 100 )
scale = Vector2( 2.3, 2.3 )

[node name="Leaf2" parent="LeafContainer" instance=ExtResource( 2 )]
position = Vector2( 634.378, 123.598 )
scale = Vector2( 2.3, 2.3 )
cuando = 2

[node name="Leaf3" parent="LeafContainer" instance=ExtResource( 2 )]
position = Vector2( 995.637, 460.571 )
scale = Vector2( 2.3, 2.3 )
cuando = 3

[node name="Leaf4" parent="LeafContainer" instance=ExtResource( 2 )]
position = Vector2( 578.216, 326.996 )
scale = Vector2( 2.3, 2.3 )
cuando = 4

[node name="Stick" parent="LeafContainer" instance=ExtResource( 12 )]
position = Vector2( 281.63, 246.342 )
scale = Vector2( 2.3, 2.3 )
random_movement = false

[node name="Stick2" parent="LeafContainer" instance=ExtResource( 12 )]
position = Vector2( 774.486, 190.291 )
scale = Vector2( 2.3, 2.3 )
cuando = 2
random_movement = false

[node name="Stick3" parent="LeafContainer" instance=ExtResource( 12 )]
position = Vector2( 749.36, 690.878 )
scale = Vector2( 2.3, 2.3 )
cuando = 3
random_movement = false

[node name="Stick4" parent="LeafContainer" instance=ExtResource( 12 )]
position = Vector2( 320.286, 625.164 )
scale = Vector2( 2.3, 2.3 )
cuando = 4
random_movement = false

[node name="UI" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="WinMessage" type="Label" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0.878431, 0.0862745, 0.0862745, 1 )
custom_colors/font_color_shadow = Color( 0.419608, 0.0666667, 0.0666667, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Uuuuuuu!
Se acercan las chicas
^ ^ ,"
align = 1
valign = 1
autowrap = true

[connection signal="timeout" from="CleanCheck" to="." method="_on_CleanCheck_timeout"]
[connection signal="timeout" from="ResetCountdown" to="." method="_on_ResetCountdown_timeout"]
[connection signal="timeout" from="MusicManager/Metronome/Timer" to="MusicManager/Metronome" method="_on_Timer_timeout"]
